# qr_game_backend

./: .gitignore  .replit  README.md  alembic.ini  auth.py  config.py  database.py  example_client_implementation.md  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  schemas.py
attached_assets/: Pasted-Here-s-a-structured-list-of-instructions-for-what-needs-to-be-implemented-in-the-FastAPI-QR-Service--1739469308824.txt
auth/: utils.py
dev_frontend_service/: dev_test_server.py
dev_frontend_service/templates/: logged_in.html  login.html
routes/: __init__.py  admin.py  auth.py  hunts.py  player.py  puzzle.py  qr.py  qr_code.py  websocket.py
utils/: generate_qr_code.py  location.py
utils/minigames/: GameHandler.py  rps_handler.py
