[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "geoalchemy2>=0.17.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]
